# humanize

./: .gitignore  CLAUDE.md  DETECTION_ROBUSTNESS.md  LICENSE  PLAN.md  README.md  SKILL.md  pyproject.toml
agents/: humanizer-reviewer.md
hooks/: humanize-post-write.sh
scripts/: burstiness_check.py  humanize_score.py  install.sh
