[project]
name = "humanize"
version = "1.0.0"
description = "Anti-slop framework for Claude Code: skill + scorer + agent + hook. 38 AI-writing patterns, domain-aware. Extends blader/humanizer."
authors = [
    {name = "Kimal Honour Djam", email = "kimhons@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries",
]
keywords = ["claude-code", "humanizer", "ai-slop", "writing-quality", "academic-writing"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/kimhons/humanize"
Issues = "https://github.com/kimhons/humanize/issues"
Documentation = "https://github.com/kimhons/humanize/blob/main/README.md"

[project.scripts]
humanize-score = "humanize_score:main"
burstiness-check = "burstiness_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
